--- a/src/long-multiplication-command-line/Cargo.toml
+++ b/src/long-multiplication-command-line/Cargo.toml
@@ -3,7 +3,7 @@ name = "long-multiplication-command-line"
 version = "1.0.0"
 edition = "2021"
 description = "Create a table with the long-multiplication method given two coefficients."
-authors = ["Israel Roldan", "Israel Roldan <israel.alberto.rv@gmail.com>"]
+authors = ["Israel Roldan <israel.alberto.rv@gmail.com>"]
 repository = "https://github.com/airvzxf/long-multiplication-calculator"
 license = "GPL-3.0"
 # readme = "README.md"
